--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,15 +2,10 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 10vh;
+    height: 5rem;
     align-items: center;
-    background-color: #161b22;
-}
-
-.placeholder {
-    width: 20rem;
-    height: 8rem;
-    background-color: black;
+    background-color: #06163d;
+    border-bottom: 1px solid #1782e6;
 }
 
 .navbar-item-container{
@@ -22,19 +17,39 @@
 
 .navbar-item{
     font-weight: 400;
+    width: 5rem;
+    margin: 0 1rem;
+    padding-bottom: 0.25rem;
     text-decoration: none;
-    color: white;
+    color: #1782e6;
     width: 8rem;
+    border-bottom: 1px solid transparent;
+    transition: border .3s;
 }
 
 .navbar-item:hover{
-    outline: 1px solid white;
+    border-bottom: 1px solid #1782e6;
 }
 
 .logo-image-container{
-    width: 10rem;
+    width: 15rem;
 }
 
 .logo-image{
     width: 100%;
+}
+
+.dropdown-menu{
+    border-radius: 3px;
+    overflow: hidden;
+    background-color: white;
+    position: relative;
+    min-width: 150px;
+}
+
+.dropdown-menu ul{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: left;
 }
