--- a/src/containers/ItemListContainer/ItemListContainer.css
+++ b/src/containers/ItemListContainer/ItemListContainer.css
@@ -1,5 +1,6 @@
-.greeting-container{
+.item-list-container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 20rem;
+    align-items: center;
 }
